# ubitix

./: .gitignore  Cargo.toml  README.md  ubitix.service
.github/workflows/: records.yml  release.yml  update_dns_records.yml
configs/: gateway.toml  ubitix.toml
src/: cli.rs  main.rs
src/action/: mod.rs
src/common/: mod.rs  storage.rs
src/gateway/: mod.rs  rules.rs  subnet.rs  watcher.rs
