[package]
name = "ubitix"
version = "0.0.0-nightly"
edition = "2024"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }

# CLI argument parsing
clap = { version = "4.5.53", features = ["derive"] }

# Logging facade and simple log backend
log = "0.4.29"
simplelog = "0.12.2"

# Error reporting with rich diagnostics
color-eyre = "0.6.5"

# TOML
toml = "0.9.8"
serde_json = "1.0.145"
serde = "1.0.228"

# Regex processing
regex = "1.12.2"

# GitHub API client
octocrab = "0.48.1"

# File-system notifications (cross-platform)
notify = "8.2.0"

# IP network parsing and utilities
ipnet = { version = "2.11.0", features = ["serde"] }
iptables = "0.6.0"

# Standard OS-specific directories
directories = "6.0.0"
walkdir_minimal = "1.0.1"